syntax = "proto3";
option go_package = "api";

message Plugin {
  string name = 1;
  string version = 2;
}

message PluginMetadata {
  string full_name = 1;
  Plugin plugin = 2;
  repeated Plugin dependencies = 3;
  repeated Plugin optional_dependencies = 4;
}

message PluginsRegistry {
  repeated Plugin plugins = 1;
}

message Graph {
  message Node {
    Plugin plugin = 1;
    repeated Node dependencies = 3;
    repeated Node optional_dependencies = 4;
  }
  repeated Node nodes = 1;
}

// Project represents a file that lists the packages
// your project depends on
message Project {
  map<string,string> dependencies = 1;
}
